<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

	<item
		android:id="@+id/wallet_options_request"
		android:icon="@drawable/ic_action_receive"
		android:showAsAction="always|withText"
		android:title="@string/request_coins_activity_title"
		android:titleCondensed="@string/button_request_coins"
		android:visible="@bool/wallet_actions_top"/>
	<item
		android:id="@+id/wallet_options_send"
		android:icon="@drawable/ic_action_send"
		android:showAsAction="always|withText"
		android:title="@string/send_coins_activity_title"
		android:titleCondensed="@string/button_send_coins"
		android:visible="@bool/wallet_actions_top"/>
	<item
		android:id="@+id/wallet_options_scan"
		android:icon="@drawable/ic_action_camera"
		android:showAsAction="always|withText"
		android:title="@string/button_scan"
		android:visible="@bool/wallet_actions_top"/>
	<item
		android:id="@+id/wallet_options_app_platform"
		android:icon="@drawable/icon_box"
		android:showAsAction="ifRoom|withText"
		android:title="@string/app_platform"/>
	<item
		android:id="@+id/wallet_options_exchange_rates"
		android:showAsAction="never"
		android:title="@string/exchange_rates_activity_title"/>
	<item
		android:showAsAction="never"
		android:title="@string/wallet_options_backup">
		<menu>
			<item
				android:id="@+id/wallet_options_export_keys"
				android:showAsAction="never"
				android:title="@string/export_keys_dialog_title"/>
			<item
				android:id="@+id/wallet_options_import_keys"
				android:showAsAction="never"
				android:title="@string/import_keys_dialog_title"/>
		</menu>
	</item>
	<item
		android:id="@+id/wallet_options_preferences"
		android:showAsAction="never"
		android:title="@string/preferences_activity_title"/>
	<item
		android:id="@+id/wallet_options_about"
		android:showAsAction="never"
		android:title="@string/about_title"/>
	<item
		android:id="@+id/wallet_options_safety"
		android:showAsAction="never"
		android:title="@string/wallet_options_safety"/>
	<item
		android:id="@+id/wallet_options_donate"
		android:showAsAction="never"
		android:title="@string/wallet_options_donate"/>
	<item
		android:id="@+id/wallet_options_help"
		android:showAsAction="never"
		android:title="@string/button_help"/>

</menu>
