<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	style="@style/ActivityPadding"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical" >

	<AutoCompleteTextView
		android:id="@+id/actv_contact_name"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:hint="@string/name"
		android:inputType="textPersonName"
		android:textSize="20sp" />

	<RadioGroup
		android:id="@+id/rg_contact_type"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:paddingTop="8dp" >

		<RadioButton
			android:id="@+id/rb_connect_via_hive"
			style="@style/RadioButtonSection"
			android:checked="true"
			android:text="@string/connect_via_hive"
			android:textAllCaps="true" />

		<EditText
			android:id="@+id/et_hive_invitation"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:inputType="textMultiLine|textNoSuggestions"
			android:text="@string/sample_hive_invitation"
			android:textSize="15sp" />

		<Button
			android:id="@+id/b_share_invitation"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="right"
			android:drawableLeft="@drawable/ic_menu_share"
			android:text="@string/send_invitation"
			android:textSize="16sp" />

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:padding="16dp"
			android:text="@string/or_divider"
			android:textAllCaps="true"
			android:textSize="20sp"
			android:textStyle="bold" />

		<RadioButton
			android:id="@+id/rb_add_bitcoin_address"
			style="@style/RadioButtonSection"
			android:text="@string/add_bitcoin_address"
			android:textAllCaps="true" />

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal" >

			<EditText
				android:id="@+id/et_bitcoin_address"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_gravity="bottom"
				android:layout_weight="1"
				android:hint="@string/bitcoin_address"
				android:inputType="textNoSuggestions" />

			<ImageButton
				android:id="@+id/ib_camera"
				style="@style/NormalButton"
				android:contentDescription="@string/scan"
				android:src="@drawable/icon_camera" />
		</LinearLayout>

		<Button
			android:id="@+id/b_add_contact"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="right"
			android:drawableLeft="@drawable/ic_menu_invite"
			android:enabled="false"
			android:text="@string/add_contact"
			android:textSize="16sp" />
	</RadioGroup>

</LinearLayout>