<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="horizontal" >

	<RelativeLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" >

		<ImageView
			android:id="@+id/iv_contact_photo"
			style="@style/ContactPhoto"
			android:contentDescription="@string/contact_photo" />

		<ImageView
			android:id="@+id/iv_contact_photo_hive_indicator"
			style="@style/HiveIndicator"
			android:layout_alignBottom="@id/iv_contact_photo"
			android:layout_alignRight="@id/iv_contact_photo"
			android:contentDescription="@string/hive_icon"
			android:src="@drawable/app_icon"
			android:visibility="invisible" />
	</RelativeLayout>

	<TextView
		android:id="@+id/tv_contact_name"
		android:layout_width="0dp"
		android:layout_height="match_parent"
		android:layout_weight="1"
		android:clickable="true"
		android:gravity="center_vertical" />

	<ImageButton
		style="@style/NormalButton"
		android:contentDescription="@string/receive_money"
		android:src="@drawable/icon_receive_money" />

	<ImageButton
		style="@style/NormalButton"
		android:contentDescription="@string/send_money"
		android:src="@drawable/icon_send_money" />

</LinearLayout>